spectec/test/elab/neg/ctx-relation-undefined.t
  $ ./main.exe ctx-relation-undefined.spectec 2>&1
  error[elab/ctx-relation-undefined]: relation `Missing` is undefined
    --> ctx-relation-undefined.spectec:5:6
    |
  5 | rule Missing/case:
    |      ^^^^^^^
  [1]
